--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
 </head>
 <body>
     <header>
-        
+        <h1>Web and User Experience</h1>
+        <p>This page will hold information on what UX and UI are in Web development, and explain the difference between them.</p>
+        <img width="400" src="/images/UX_vs_UI_Intro.webp" alt="Ux vs UI Intro">
     </header>
-    
+    <main>
+
+        <section id="infoList">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
