--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <header>
         <h1>Web and User Experience</h1>
         <p>This page will hold information on what UX and UI are in Web development, and explain the difference between them.</p>
-        <img width="400" src="/images/UX_vs_UI_Intro.webp" alt="Ux vs UI Intro">
+        <img width="400" src="/images/UX_vs_UI_Intro.webp" alt="Ux vs UI Intro"><br>
+        <a href="https://www.coursera.org/articles/ui-vs-ux-design" target="blank">Article for UX vs UI</a><br>
+        <a href="https://artisantalent.com/types-of-ux-jobs/" target="blank">Article for job types</a>
     </header>
     <main>
 
@@ -20,6 +22,31 @@
                 <li></li>
             </ul>
         </section>
+
+        <div>
+            <table id = "infoJob">
+                <tr>
+                    <th>Job Title</th>
+                    <th>Salary</th>
+                </tr>
+                <tr>
+                    <td>UX Developers</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>UX Architects</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>UI Designers</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>UI Developers</td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
     </main>
     <footer>
 
