--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
 <body>
     <header>
         <h1>Web and User Experience</h1>
-        <p>This page will hold information on what UX and UI are in Web development, and explain the difference between them.</p>
+        <p>This page will hold information on what UX and UI are in Web development and some more information on what they do</p>
         <img width="400" src="/images/UX_vs_UI_Intro.webp" alt="Ux vs UI Intro"><br>
         <a href="https://www.coursera.org/articles/ui-vs-ux-design" target="blank">Article for UX vs UI</a><br>
-        <a href="https://artisantalent.com/types-of-ux-jobs/" target="blank">Article for job types</a>
+        <a href="https://artisantalent.com/types-of-ux-jobs/" target="blank">Article for job types</a><br>
+        <a href="https://www.lilachbullock.com/benefits-ui-designer/" target="blank">Article sbout Reasons to be UI Developer</a>
     </header>
     <main>
 
         <section id="infoList">
+            <h2>Reasons to be a UI developer</h2>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>With Proper Experience, You Can Set Up Your Design Firm</li>
+                <li>You Can Work As A Freelance UI Designer</li>
+                <li>You Earn More Money Compared To Other Careers</li>
+                <li>Creativity Sets You Apart From The Rest</li>
+                <li>You Form Good Networks With Different People</li>
             </ul>
         </section>
+
+        <img width="400" src="/images/UX_vs_UI_Ven.png" alt="UX vs UI Ven Diagram">
 
         <div>
             <table id = "infoJob">
@@ -31,22 +37,24 @@
                 </tr>
                 <tr>
                     <td>UX Developers</td>
-                    <td></td>
+                    <td>89,433</td>
                 </tr>
                 <tr>
                     <td>UX Architects</td>
-                    <td></td>
+                    <td>92,993</td>
                 </tr>
                 <tr>
                     <td>UI Designers</td>
-                    <td></td>
+                    <td>129,617</td>
                 </tr>
                 <tr>
                     <td>UI Developers</td>
-                    <td></td>
+                    <td>117,000</td>
                 </tr>
             </table>
         </div>
+
+        <img width="400" src="/images/Position_difference.png" alt="Differences in position">
     </main>
     <footer>
 
